# bedouin

./: pyproject.toml
test/features/: bedouin.feature  environment.py
test/features/steps/: bedouin.py
