[project]
name = "bedouin"
version = "0.1.0"
description = "SQLite migration tool with JSON schema definition"
authors = [
    {name = "nogjam",email = "nathaniel-j-jones@proton.me"}
]
license = {text = "MIT"}
readme = "README.adoc"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
